--- a/env.template/.env.template
+++ b/env.template/.env.template
@@ -4,3 +4,4 @@ VT_API_KEY =
 VT_API_URL = "https://www.virustotal.com/api/v3/file/report"
 VT_UPLOAD_URL = "https://www.virustotal.com/api/v3/files"
 VT_ANALYSIS_URL = "https://www.virustotal.com/api/v3/analyses"
+VT_LARGE_UPLOAD_FILE = "https://www.virustotal.com/api/v3/files/upload_url"
